--- a/package.json
+++ b/package.json
@@ -32,21 +32,29 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "babel-core": "^6.10.4",
+    "babel-polyfill": "^6.9.1",
+    "body-parser": "^1.15.2",
+    "cheerio": "^0.20.0",
     "debug": "^2.2.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "jquery": "^3.0.0",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.0",
+    "request": "^2.72.0",
     "rimraf": "^2.5.2",
-    "socket.io": "^1.4.6"
+    "socket.io": "^1.4.6",
+    "superagent": "^2.0.0"
   }
 }
